// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> match snapshot  in dark mode 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessibilityElementsHidden={true}
    allowFontScaling={false}
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    selectable={false}
    style={
      [
        {
          "color": "#E0E0E0",
          "fontSize": 24,
        },
        [
          {
            "lineHeight": 24,
            "transform": [
              {
                "scaleX": 1,
              },
            ],
          },
          {
            "backgroundColor": "transparent",
          },
        ],
        {
          "fontFamily": "material-community",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    󰔎
  </Text>
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#B3B3B3"
    style={
      [
        {
          "height": 31,
          "width": 51,
        },
        [
          {
            "marginHorizontal": 7,
          },
          {
            "backgroundColor": "#E0E0E0",
            "borderRadius": 16,
          },
        ],
      ]
    }
    testID="toggle-switch"
    tintColor="#E0E0E0"
    value={true}
  />
</View>
`;

exports[`<Toggle /> match snapshot in light mode 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Text />
  <RCTSwitch
    accessibilityRole="switch"
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTintColor="#666"
    style={
      [
        {
          "height": 31,
          "width": 51,
        },
        [
          {
            "marginHorizontal": 7,
          },
          {
            "backgroundColor": "#666",
            "borderRadius": 16,
          },
        ],
      ]
    }
    testID="toggle-switch"
    tintColor="#004f6b"
    value={false}
  />
</View>
`;
